--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
            <button class="btn">Saiba mais!</button>
         </div>
-        <div class="vol-right">
+        <div class="col-right">
             <img src="images\illustration-intro.svg" alt="">
         </div>
     </section>
