--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <header>
+    <div class="menu-toggle menu-toggle-on">
         <a class="navbar-logo" href="#">
             <img src="images\logo.svg" alt="">
         </a>
@@ -24,6 +25,14 @@
         </ul>
 
         <button class="btn"> See more!</button>
+
+
+        <div class="hamburger">
+            <span class="one"></span>
+            <span class="two"></span>
+            <span class="three"></span>
+        </div>
+    </div>
 
     </header>
 
@@ -163,6 +172,6 @@
               </div>
         </div>
     </footer>
-    
+    <script src="main.js" ></script>
 </body>
 </html>
